[gd_scene load_steps=9 format=3 uid="uid://cq03nu5yt1hyv"]

[ext_resource type="Script" path="res://Game/railings.gd" id="1_d8qn5"]
[ext_resource type="Material" uid="uid://nne6727dbfbc" path="res://Shaders/enviroment.tres" id="1_jispi"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8jphj"]
friction = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_duhfa"]

[sub_resource type="BoxMesh" id="BoxMesh_60vua"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jew4v"]
size = Vector3(0.990295, 0.501099, 1)

[sub_resource type="Curve3D" id="Curve3D_qg806"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -0.892472, 0.701085, 0.0137243, 0, 0, 0, 0, 0, 0, 0.911084, 0.57311, -0.0490112),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_tbled"]

[node name="Railings" type="StaticBody3D" groups=["rail"]]
physics_material_override = SubResource("PhysicsMaterial_8jphj")
script = ExtResource("1_d8qn5")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.816787, 0, 0, 0, 0.523627, 0, 0, 0, 2.47525, 2.26206, 0.821394, -0.0398337)
mesh = SubResource("BoxMesh_duhfa")
skeleton = NodePath("../Path3D/PathFollow3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(4.65069, 0, 0, 0, 0.153948, 0, 0, 0, 0.0910827, 0, 0.386214, 0)
material_override = ExtResource("1_jispi")
mesh = SubResource("BoxMesh_60vua")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(-1.5621e-07, 0.0389591, 0, -3.57367, -1.70295e-09, 0, 0, 0, 0.609001, -0.366158, -1.38153, 0)
material_override = ExtResource("1_jispi")
mesh = SubResource("BoxMesh_60vua")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(-1.5621e-07, 0.0389591, 0, -3.57367, -1.70295e-09, 0, 0, 0, 0.609001, 0.363481, -1.38153, 0)
material_override = ExtResource("1_jispi")
mesh = SubResource("BoxMesh_60vua")

[node name="RailCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(4.74531, 0, 0, 0, 0.941768, 0, 0, 0, 0.17159, -0.0134678, 0.134793, 0)
shape = SubResource("BoxShape3D_jew4v")

[node name="Path3D" type="Path3D" parent="."]
transform = Transform3D(2.48282, 0, 0, 0, 0.494577, 0, 0, 0, 0.812746, 0, 0, 0)
curve = SubResource("Curve3D_qg806")

[node name="RailSnap1" type="Area3D" parent="Path3D"]
transform = Transform3D(0.19, 0, -1.64729e-09, 0, 0.952, 0, 5.40562e-10, 0, 0.579, 1.27786, 1.46234, 5.72948e-09)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/RailSnap1"]
shape = SubResource("BoxShape3D_tbled")

[node name="RailSnap2" type="Area3D" parent="Path3D"]
transform = Transform3D(0.666581, 2.40068e-08, -1.20034e-08, 0, 3.34629, 0, 0, 0, 2.03631, -1.19994, 1.46964, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path3D/RailSnap2"]
shape = SubResource("BoxShape3D_tbled")

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D"]
transform = Transform3D(-0.0347615, 0.0706927, 0.996787, 0, 0.99748, -0.0707291, -0.999346, -0.00245899, -0.0346724, 0.911084, 0.57311, -0.0490112)
progress = 1.80918
use_model_front = true
cubic_interp = false
loop = false
tilt_enabled = false

[node name="playerGrabber" type="RemoteTransform3D" parent="Path3D/PathFollow3D"]
transform = Transform3D(1, 0, 7.45058e-09, 0, 1, -1.76733e-08, -3.72529e-09, -2.23372e-09, 1, 0, 1.08498, -0.0769476)
remote_path = NodePath("../../../MeshInstance3D2")
update_rotation = false
update_scale = false

[connection signal="area_entered" from="Path3D/RailSnap1" to="." method="_on_rail_snap_1_area_entered"]
[connection signal="area_exited" from="Path3D/RailSnap1" to="." method="_on_rail_snap_1_area_exited"]
[connection signal="area_entered" from="Path3D/RailSnap2" to="." method="_on_rail_snap_2_area_entered"]
